Fix alignment.
Fixes alignment issues and adds a-tag styling.

--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,13 @@ body {
   padding: 2em;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.8), rgba(0,0,0,0));
 }
+
+a:link {
+  color: white;
+}
+a:visited {
+  color: lightgrey;
+}
+a:active {
+  color: blue;
+}
